# Equipo_208

./: README.md  gestionar_actividad.cc
include/: actividad.h  inicioSesion.h  organizador.h  usuario.h
src/: actividad.cc  inicioSesion.cc  menu.cc  organizador.cc  usuario.cc
tests/: CMakeLists.txt  actividad_test.cc
